--- a/src/Web/WebMVC/Views/_ViewImports.cshtml
+++ b/src/Web/WebMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using RTCodingExercise.Microservices
-@using RTCodingExercise.Microservices.Models
+﻿@using WebMVC
+@using WebMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
