--- a/src/Web/WebMVC/Views/Home/Index.cshtml
+++ b/src/Web/WebMVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Catalog.Domain.Plate>
+﻿@model PaginatedResponse<DTOs.PlateDto>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -6,5 +6,54 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Test check.</p>
+</div>
+<div>
+    @if (Model != null && Model.Items.Any())
+    {
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Plate</th>
+                    <th>Purchase Price</th>
+                    <th>Sale Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var plate in Model.Items)
+                {
+                    <tr>
+                        <td>@plate.Registration</td>
+                        <td>@plate.PurchasePrice</td>
+                        <td>@plate.SalePrice</td>
+                        <td>@plate.CalculatedSalePrice</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <nav>
+            <ul class="pagination">
+                <li class="page-item @(Model.CurrentPage <= 1 ? "disabled" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.CurrentPage - 1)">
+                        Previous
+                    </a>
+                </li>
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                        <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+                <li class="page-item @(Model.CurrentPage >= Model.TotalPages ? "disabled" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.CurrentPage + 1)">
+                        Next
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    }
+    else
+    {
+        <p>No plates available to display.</p>
+    }
 </div>
