--- a/src/Web/WebMVC/Views/Home/Index.cshtml
+++ b/src/Web/WebMVC/Views/Home/Index.cshtml
@@ -15,29 +15,29 @@
             <thead>
                 <tr>
                     <th>
-                        <a href="@Url.Action("Index", new { sortBy = "Registration", sortDirection = Model.SortBy == "Registration" && Model.SortDirection == "asc" ? "desc" : "asc", pageNumber = Model.CurrentPage })">
+                        <a href="@Url.Action("Index", Model.PaginationState.ChangeSortBy("Registration"))">
                             Plate
-                            @if (Model.SortBy == "Registration")
+                            @if (Model.PaginationState.SortBy == "Registration")
                             {
-                                <span>@(Model.SortDirection == "asc" ? "↑" : "↓")</span>
+                                <span>@(Model.PaginationState.SortDirection == "asc" ? "↑" : "↓")</span>
                             }
                         </a>
                     </th>
                     <th>
-                        <a href="@Url.Action("Index", new { sortBy = "PurchasePrice", sortDirection = Model.SortBy == "PurchasePrice" && Model.SortDirection == "asc" ? "desc" : "asc", pageNumber = Model.CurrentPage })">
+                        <a href="@Url.Action("Index", Model.PaginationState.ChangeSortBy("PurchasePrice"))">
                             Purchase Price
-                            @if (Model.SortBy == "PurchasePrice")
+                            @if (Model.PaginationState.SortBy == "PurchasePrice")
                             {
-                                <span>@(Model.SortDirection == "asc" ? "↑" : "↓")</span>
+                                <span>@(Model.PaginationState.SortDirection == "asc" ? "↑" : "↓")</span>
                             }
                         </a>
                     </th>
                     <th>
-                        <a href="@Url.Action("Index", new { sortBy = "SalePrice", sortDirection = Model.SortBy == "SalePrice" && Model.SortDirection == "asc" ? "desc" : "asc", pageNumber = Model.CurrentPage })">
+                        <a href="@Url.Action("Index", Model.PaginationState.ChangeSortBy("SalePrice"))">
                             Sale Price
-                            @if (Model.SortBy == "SalePrice")
+                            @if (Model.PaginationState.SortBy == "SalePrice")
                             {
-                                <span>@(Model.SortDirection == "asc" ? "↑" : "↓")</span>
+                                <span>@(Model.PaginationState.SortDirection == "asc" ? "↑" : "↓")</span>
                             }
                         </a>
                     </th>
@@ -56,19 +56,21 @@
         </table>
         <nav>
             <ul class="pagination">
-                <li class="page-item @(Model.CurrentPage <= 1 ? "disabled" : "")">
-                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.CurrentPage - 1)" asp-route-sortBy="@Model.SortBy" asp-route-sortDirection="@Model.SortDirection">
+                <li class="page-item @(Model.PaginationState.CurrentPage <= 1 ? "disabled" : "")">
+                    <a class="page-link" href="@Url.Action("Index", Model.PaginationState.ChangePage(Model.PaginationState.CurrentPage - 1))">
                         Previous
                     </a>
                 </li>
                 @for (int i = 1; i <= Model.TotalPages; i++)
                 {
-                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                        <a class="page-link" asp-action="Index" asp-route-pageNumber="@i" asp-route-sortBy="@Model.SortBy" asp-route-sortDirection="@Model.SortDirection">@i</a>
+                    <li class="page-item @(i == Model.PaginationState.CurrentPage ? "active" : "")">
+                        <a class="page-link" href="@Url.Action("Index", Model.PaginationState.ChangePage(i))">
+                            @i
+                        </a>
                     </li>
                 }
-                <li class="page-item @(Model.CurrentPage >= Model.TotalPages ? "disabled" : "")">
-                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@(Model.CurrentPage + 1)" asp-route-sortBy="@Model.SortBy" asp-route-sortDirection="@Model.SortDirection">
+                <li class="page-item @(Model.PaginationState.CurrentPage >= Model.TotalPages ? "disabled" : "")">
+                    <a class="page-link" href="@Url.Action("Index", Model.PaginationState.ChangePage(Model.PaginationState.CurrentPage + 1))">
                         Next
                     </a>
                 </li>
